--- a/src/app/folder/folder.page.html
+++ b/src/app/folder/folder.page.html
@@ -1,21 +1,33 @@
 <ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-buttons slot="start">
-      <ion-menu-button></ion-menu-button>
-    </ion-buttons>
-    <ion-title>{{ folder }}</ion-title>
-  </ion-toolbar>
+    <ion-toolbar>
+        <ion-buttons slot="start">
+            <ion-menu-button></ion-menu-button>
+        </ion-buttons>
+        <ion-title>{{ folder }}</ion-title>
+    </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">{{ folder }}</ion-title>
-    </ion-toolbar>
-  </ion-header>
+    <ion-header collapse="condense">
+        <ion-toolbar>
+            <ion-title size="large">{{ folder }}</ion-title>
+        </ion-toolbar>
+    </ion-header>
 
-  <div id="container">
-    <strong class="capitalize">{{ folder }}</strong>
-    <p>Explore <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
+    <ion-list>
+        <ion-list-header>
+            Poemas Recientes
+        </ion-list-header>
+
+        <div *ngFor="let poema of poemas | async">
+            <ion-item>
+                <ion-label>
+                    <h2>{{ poema.autor }}</h2>
+                    <h3>{{ poema.titulo }}</h3>
+                    <p>{{ poema.texto_poema }}</p>
+                    <p>{{ poema.fecha }}</p>
+                </ion-label>
+            </ion-item>
+        </div>
+    </ion-list>
 </ion-content>
